tera/src/snapshot_tests/snapshots/tera__snapshot_tests__compiler__compiler_ok@component_call_body.txt.snap
---
source: tera/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: tera/src/snapshot_tests/compiler_inputs/success/component_call_body.txt
---
=== component_call_body.txt ===
0000 BuildMap(0)
0001 RenderBodyComponent("footer", 0)
0002 WriteTop
