tera/src/snapshot_tests/snapshots/tera__snapshot_tests__compiler__compiler_ok@constant_folding.txt.snap
---
source: tera/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: tera/src/snapshot_tests/compiler_inputs/success/constant_folding.txt
---
=== constant_folding.txt ===
0000 LoadConst(I64(1))
0001 LoadConst(I64(10))
0002 Plus
0003 WriteTop
