tera/src/snapshot_tests/snapshots/tera__snapshot_tests__compiler__compiler_ok@filter_section.txt.snap
---
source: tera/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: tera/src/snapshot_tests/compiler_inputs/success/filter_section.txt
---
=== filter_section.txt ===
0000 Capture
0001 WriteText("\nHello ")
0002 LoadName("world")
0003 WriteTop
0004 WriteText("\n")
0005 EndCapture
0006 LoadConst(String("lang", Normal))
0007 LoadConst(String("fr", Normal))
0008 BuildMap(1)
0009 ApplyFilter("capitalize")
