tera/src/snapshot_tests/snapshots/tera__snapshot_tests__compiler__compiler_ok@for.txt.snap
---
source: tera/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: tera/src/snapshot_tests/compiler_inputs/success/for.txt
---
=== for.txt ===
0000 LoadName("my_array")
0001 BuildMap(0)
0002 ApplyFilter("sort")
0003 StartIterate(false)
0004 StoreLocal("v")
0005 Iterate(9)
0006 LoadName("v")
0007 WriteTop
0008 Jump(5)
0009 PopLoop
